restrict select behavior

--- a/src/index.scss
+++ b/src/index.scss
@@ -2,3 +2,17 @@
   font-family: serif;
   font-size: 20px;
 }
+
+body {
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+}
+
+.maf-text-selectable {
+  user-select: text;
+  -webkit-user-select: text;
+  -moz-user-select: text;
+  -ms-user-select: text;
+}
