ui: make app look more native on mobiles (#67)
* standalone app on ios

* add icon & splash screen

* add favicon

* fix ci

* fix vercel serving of resource files

* add nvmrc

* restrict select behavior

--- a/src/index.scss
+++ b/src/index.scss
@@ -28,3 +28,17 @@
   font-size: 20px;
   @include font-song;
 }
+
+body {
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+}
+
+.maf-text-selectable {
+  user-select: text;
+  -webkit-user-select: text;
+  -moz-user-select: text;
+  -ms-user-select: text;
+}
